--- a/papers/fcn-2015.md
+++ b/papers/fcn-2015.md
@@ -1,35 +1,19 @@
-## Rich feature hierarchies for accurate object detection and semantic segmentation
+## Fully convolutional networks for semantic segmentation
 
-R-CNN (Regions with CNN features)
+FCN
 
-http://www.cv-foundation.org/openaccess/content_cvpr_2014/html/Girshick_Rich_Feature_Hierarchies_2014_CVPR_paper.html
-
-使用selective search来生产可能的区域，使用CNN来对这些区域进行特征提取，使用线性SVM来classifier特征向量
+http://www.cv-foundation.org/openaccess/content_cvpr_2015/html/Long_Fully_Convolutional_Networks_2015_CVPR_paper.html
 
 ### 要点
 
-1. 三个步骤
-    * Region Proposal: 生成类别无关的区域（category-independent regions)
-        - 使用selective search方法（见另一篇论文）
-    * Featrue Extraction: CNN来对每个区域提取固定长度的特征向量(fixed-length feature vector from each region)
-        - AlexNet的CNN
-        - 4096 dimensional feature vector from each region
-        - 因为region是不规范的，而CNN需要规范的输入，需要把region进行变换来适应输入，作者使用最简单的办法就是直接拉伸变形到要求的尺寸
-    * Linear SVM: 类别相关的线性SVM
-2. 也可以使用在sementic segmentation上
-3. 对最后3层的研究和分析来确认对detection性能的影响
-    * 非Conv. layer对结果影响不大
-    * CNN的表达能力取决于Conv. layer
-    * 使用前面的层能够减少参数量
-4. 作者的总结
-    * 应用high-capacity的CNN到低层的proposed region来进行对象定位和语义分离
-    * 当detection的dataset很少时，训练大规模的CNN作为辅助很有帮助，也就是it is highly effective to pre-train the network— with supervision—for a auxiliary task with abundant data (image classification) and then to fine-tune the network for the target task where data is scarce (detection)
-    * 作者将这个方法称为supervised pre-training/domain-specific fine tuning
+1. sementic segmentation就是要精确到像素级，而不是detection的方框
+2. Fully convolutional networks的具体说明
+    * 每层conv net数据是个w x h x d的结构
+    * 第一层的conv net中d是channel, w, h是输入图片的宽和高
+    * 输入时任意大小的图片，输出是相应的spatial dimension
+    * 传统的深度网络(AlexNet, LeNet)都是输入固定大小的图片，输出**non-spatial** outputs
+    * 将传统的deep net输出class修改为输出heatmap
 
 
 ### 个人点评
-
-1. 从作者的介绍来看，好像很自然：selective search来找到可能的区域，用pre-trained的CNN来对区域进行特征提取，然后对区域进行classifier，但是作者能够对CNN的pool5,fc6,fc7(AlexNet)最后3层（非Conv层）来研究对于结果的影响是需要对CNN有很深理解的（研究的结果是：detection的性能更多取决于Conv. layer而不是其它的层，所以可以使用更前面的layer来减少参数量）
-2. 当然这是作者R-CNN系列的第一篇，后续还有fast-rcnn等
-3. 从实际的使用来看，性能（所谓的实时detection）也是不错的
 
