--- a/papers/fcn-2015.md
+++ b/papers/fcn-2015.md
@@ -13,7 +13,10 @@ http://www.cv-foundation.org/openaccess/content_cvpr_2015/html/Long_Fully_Convol
     * 输入时任意大小的图片，输出是相应的spatial dimension
     * 传统的深度网络(AlexNet, LeNet)都是输入固定大小的图片，输出**non-spatial** outputs
     * 将传统的deep net输出class修改为输出heatmap
-
+3. Fully convolutional networks are a rich class of models, of which modern classification convnets are a special case.
 
 ### 个人点评
+
+1. 作者将传统的classifer深度网络的FC层改为FCC（全连接卷积）层，使得输出从class变为热点，从而得出语义分割
+2. FCN解决的是语义分割(sementic segmentation)，R-CNN解决的是检测（detection,方框），二者要分清
 
